--- a/module.desktop
+++ b/module.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Type=Link
-Name=APP_NAME
-Comment=APP_NAME module
-Icon=e-module-APP_NAME
+Name=ezplug-APP_NAME
+Comment=APP_NAME ezplug module
+Icon=APP_NAME
 X-Enlightenment-ModuleType=system
